--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^4.5.0
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
