--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.5.0
   url_launcher: ^6.1.2
+  flutter_widget_from_html_core: ^0.8.5
 
 dev_dependencies:
   flutter_test:
